--- a/30/Chromolab_NURMETOV_01/main.html
+++ b/30/Chromolab_NURMETOV_01/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                NURMETOV MADINA
+                NURMETOVA MADINA
             </div>
             <div class="line">
                 <div class="colum_1">
