--- a/30/Chromolab_TURAEVA/main.html
+++ b/30/Chromolab_TURAEVA/main.html
@@ -37,14 +37,14 @@
         </div>
         <div class="main__result">
             <div class="name">
-                TURAEVA KHURSANOY
+                TURAEVA PARVINA
             </div>
             <div class="line">
                 <div class="colum_1">
                     № заявки:
                 </div>
                 <div class="colum_2">
-                    2221319685
+                    2221319699
                 </div>
             </div>
             <div class="line">
@@ -60,7 +60,7 @@
                     Дата рождения:	
                 </div>
                 <div class="colum_2">
-                    18.10.1978
+                    18.02.1979
                 </div>
             </div>
             <div class="line">
@@ -68,7 +68,7 @@
                     Дата заказа:	
                 </div>
                 <div class="colum_2">
-                    01.11.2021 10:01:46
+                    02.11.2021 10:01:46
                 </div>
             </div>
             <div class="line">
@@ -76,7 +76,7 @@
                     Дата взятия:	
                 </div>
                 <div class="colum_2">
-                    01.11.2021 10:01:46	
+                    02.11.2021 10:01:46	
                 </div>
             </div>
             <div class="line">
@@ -84,7 +84,7 @@
                     Дата выполнения:	
                 </div>
                 <div class="colum_2">
-                    01.11.2021 14:59:32
+                    02.11.2021 14:59:32
                 </div>
             </div>
             <div class="line">
@@ -92,7 +92,7 @@
                     № заявки:
                 </div>
                 <div class="colum_2">
-                    2221319685
+                    2221319699
                 </div>
             </div>
             <div class="line">
