--- a/30/Chromolab_MADRAKHIMOV/main.html
+++ b/30/Chromolab_MADRAKHIMOV/main.html
@@ -49,10 +49,10 @@
             </div>
             <div class="line">
                 <div class="colum_1">
-                    Лаборатория и заказчик:	
+                    Результат:	
                 </div>
                 <div class="colum_2">
-                    Октябрьская - ХромоЛаб 
+                    SARS-CoV-2 обнаружено 
                 </div>
             </div>
             <div class="line">
