--- a/30/Chromolab_QARAQULOV4677/main.html
+++ b/30/Chromolab_QARAQULOV4677/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                КАРАКУЛОВ АЛИМУХМАД
+                КАРАКУЛОВ АЛИМУХАМАД
             </div>
             <div class="line">
                 <div class="colum_1">
