--- a/30/Chromolab_NURBEK/main.html
+++ b/30/Chromolab_NURBEK/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                АЙТБАЙ УУЛУ НУРБЕК
+                АСЫЛБЕК УУЛУ НУРБЕК
             </div>
             <div class="line">
                 <div class="colum_1">
@@ -60,7 +60,7 @@
                     Дата рождения:	
                 </div>
                 <div class="colum_2">
-                    21.05.1997
+                    07.12.2003
                 </div>
             </div>
             <div class="line">
@@ -68,7 +68,7 @@
                     Дата заказа:	
                 </div>
                 <div class="colum_2">
-                    05.11.2021 10:01:46
+                    20.12.2021 10:01:46
                 </div>
             </div>
             <div class="line">
@@ -76,7 +76,7 @@
                     Дата взятия:	
                 </div>
                 <div class="colum_2">
-                    05.11.2021 10:01:46	
+                    20.12.2021 10:01:46	
                 </div>
             </div>
             <div class="line">
@@ -84,7 +84,7 @@
                     Дата выполнения:	
                 </div>
                 <div class="colum_2">
-                    05.11.2021 14:59:32
+                    20.12.2021 14:59:32
                 </div>
             </div>
             <div class="line">
