--- a/30/Chromolab_AQ_896745F/main.html
+++ b/30/Chromolab_AQ_896745F/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                АБДУРАХИМОВ ЗАФАР
+                АБДУРАХИМОВ КОСИМЖОН
             </div>
             <div class="line">
                 <div class="colum_1">
