--- a/30/Chromolab_NA_876879D/main.html
+++ b/30/Chromolab_NA_876879D/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                НУРКАЛИМОВ АКБАР 
+                НУРКАМИЛОВ АКБАР 
             </div>
             <div class="line">
                 <div class="colum_1">
