--- a/30/Chromolab_KS_656878F/main.html
+++ b/30/Chromolab_KS_656878F/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                КОС СЕФА
+                КОЧ СЕФА
             </div>
             <div class="line">
                 <div class="colum_1">
