--- a/30/Chromolab_KHB_988/main.html
+++ b/30/Chromolab_KHB_988/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ХОРИНОВ БЕКТОШ
+                ХОЛИКОВ БАХТИЁР
             </div>
             <div class="line">
                 <div class="colum_1">
@@ -60,7 +60,7 @@
                     Дата рождения:	
                 </div>
                 <div class="colum_2">
-                    12.02.1983
+                    28.06.1988
                 </div>
             </div>
             <div class="line">
