--- a/30/Chromolab_DJS_46A687G/main.html
+++ b/30/Chromolab_DJS_46A687G/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ДЖАМШЕДОВ ШАХТИЁР
+                ДЖАМШЕДОВ ШАХРИЁР
             </div>
             <div class="line">
                 <div class="colum_1">
