--- a/30/Chromolab_YM_65A667D/main.html
+++ b/30/Chromolab_YM_65A667D/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ЮСУПОВ МАКСУД
+                ЮСУПОВ МАКСАД
             </div>
             <div class="line">
                 <div class="colum_1">
