--- a/30/Chromolab_SR_6798A58F/main.html
+++ b/30/Chromolab_SR_6798A58F/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                СОЛЕНКО РУСЛАН
+                СОПЕНКО РУСЛАН
             </div>
             <div class="line">
                 <div class="colum_1">
