--- a/30/Chromolab_ZA_84/main.html
+++ b/30/Chromolab_ZA_84/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ЗАЙНАБ АДАМ САЛЕХ АБАКР
+                ЗАЙНАБ АДАМ САЛЕХ АБАКАР
             </div>
             <div class="line">
                 <div class="colum_1">
