--- a/30/Chromolab_KM_0987A6467/main.html
+++ b/30/Chromolab_KM_0987A6467/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                KERIM MOAWAD GOURGI REYAD SALEH
+                KARIM MOAWAD GOURGI REYAD SALEH
             </div>
             <div class="line">
                 <div class="colum_1">
