--- a/30/Chromolab_AS_9253T/main.html
+++ b/30/Chromolab_AS_9253T/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ОСПИЁНОК СЕРГЕЙ
+                ОСИПЁНОК СЕРГЕЙ
             </div>
             <div class="line">
                 <div class="colum_1">
