--- a/30/Chromolab_MJ_7567A687F9/main.html
+++ b/30/Chromolab_MJ_7567A687F9/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                МЭРИ ДЖЕЙН ТАТЯНА ЭЛИЗАБЕТ МЭРИ
+                МАРИ ЖАН ТАТЬЯНА ЭЛИЗАБЕЗ МАРИ
             </div>
             <div class="line">
                 <div class="colum_1">
