--- a/30/Chromolab_AZ_7886A790S/main.html
+++ b/30/Chromolab_AZ_7886A790S/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                АБДАЛОВ ЖЫРГАЛБЕК
+                АБДАЛОВ ЖЫРГАЛБЕК <br/> Рнк не обнаружено
             </div>
             <div class="line">
                 <div class="colum_1">
