--- a/30/Chromolab_SKH_486665/main.html
+++ b/30/Chromolab_SKH_486665/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+7<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,7 +68,7 @@
                     Дата заказа:	
                 </div>
                 <div class="colum_2">
-                    15.01.2022
+                    17.01.2022
                 </div>
             </div>
             <div class="line">
@@ -76,7 +76,7 @@
                     Дата взятия:	
                 </div>
                 <div class="colum_2">
-                    15.01.2022
+                    17.01.2022
                 </div>
             </div>
             <div class="line">
@@ -84,7 +84,7 @@
                     Дата выполнения:	
                 </div>
                 <div class="colum_2">
-                    15.01.2022
+                    17.01.2022
                 </div>
             </div>
             <div class="line">
