--- a/28/Chromolab_AC_0A09089D0/main.html
+++ b/28/Chromolab_AC_0A09089D0/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                АБДИМИТАЛИПОВА ЧЫНАР
+                РНК не обнаружено
             </div>
             <div class="line">
                 <div class="colum_1">
@@ -55,7 +55,7 @@
                     Октябрьская - ХромоЛаб 
                 </div>
             </div>
-            <div class="line">
+<!--             <div class="line">
                 <div class="colum_1">
                     Дата рождения:	
                 </div>
@@ -86,7 +86,7 @@
                 <div class="colum_2">
                     18.01.2022
                 </div>
-            </div>
+            </div> -->
             <div class="line">
                 <div class="colum_1">
                     № заявки:
