--- a/28/Chromolab_SC_00A898D/main.html
+++ b/28/Chromolab_SC_00A898D/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                SEHAR CEMIL
+                SEHAR CEMIL BERKAY
             </div>
             <div class="line">
                 <div class="colum_1">
