--- a/28/Chromolab_SS_6A0-90-S/main.html
+++ b/28/Chromolab_SS_6A0-90-S/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                САЖЕД ШИРИН
+                САЖЕД ШИРАН ШАХРАМ
             </div>
             <div class="line">
                 <div class="colum_1">
