--- a/28/Chromolab_HK_7A9-9DS0/main.html
+++ b/28/Chromolab_HK_7A9-9DS0/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ХОССЕИНПОУР КАВЕН ХОССЕИН
+                ХОССЕИНПОУР КАВЕХ ХОССЕИН 
             </div>
             <div class="line">
                 <div class="colum_1">
