--- a/28/Chromolab_MG_SCD/main.html
+++ b/28/Chromolab_MG_SCD/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                АБДУЖАКОВА ТОТУГУШ
+                АБУЖАКОВА ТОТУГУШ
             </div>
             <div class="line">
                 <div class="colum_1">
