--- a/28/Chromolab_MG_JL/main.html
+++ b/28/Chromolab_MG_JL/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                МУТАЛИМОВА ГАЗЕЛЬ
+                МУТАЛИМОВА ГЕЗЕЛЬ
             </div>
             <div class="line">
                 <div class="colum_1">
