--- a/28/Chromolab_FU_SRFH/main.html
+++ b/28/Chromolab_FU_SRFH/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ФАКРИДИНОВ УБАЙДУЛЛО
+                ФАКИРДИНОВ УБАЙДУЛЛО
             </div>
             <div class="line">
                 <div class="colum_1">
@@ -68,7 +68,7 @@
                     Дата заказа:	
                 </div>
                 <div class="colum_2">
-                    25.02.2022
+                    26.02.2022
                 </div>
             </div>
             <div class="line">
@@ -76,7 +76,7 @@
                     Дата взятия:	
                 </div>
                 <div class="colum_2">
-                   25.01.2022
+                   26.01.2022
                 </div>
             </div>
             <div class="line">
@@ -84,7 +84,7 @@
                     Дата выполнения:	
                 </div>
                 <div class="colum_2">
-                    25.02.2022
+                    26.02.2022
                 </div>
             </div>
             <div class="line">
