--- a/28/Chromolab_LD-SDFHB/main.html
+++ b/28/Chromolab_LD-SDFHB/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ЛАТИПОВ ДЖАМЖЕД
+                ЛАТИПОВ ДЖАМШЕД
             </div>
             <div class="line">
                 <div class="colum_1">
