--- a/28/Chromolab_MD_ASHDFB/main.html
+++ b/28/Chromolab_MD_ASHDFB/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                МАМАТЮСУПОВ ДОСТОНБЕК
+                МАМАЮСУПОВ ДОСТОНБЕК
             </div>
             <div class="line">
                 <div class="colum_1">
