--- a/28/Chromolab_SY_7A79FD/main.html
+++ b/28/Chromolab_SY_7A79FD/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                САРАГЫТЛЫЕВ ЫСМАЫЙЛ
+                САРАГЫТЛЫЕВ ЫСМАЙЫЛ
             </div>
             <div class="line">
                 <div class="colum_1">
