--- a/28/Chromolab_MB_4334A0D/main.html
+++ b/28/Chromolab_MB_4334A0D/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                МЕДИЕВ БАХТИЯР
+                МЕДИЕВ БАКТИЯР
             </div>
             <div class="line">
                 <div class="colum_1">
