--- a/28/Chromolab_HSH_XOF/main.html
+++ b/28/Chromolab_HSH_XOF/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ХУСЕЙНИ ШАХИН
+                ГУСЕЙНИ ШАХИН
             </div>
             <div class="line">
                 <div class="colum_1">
