--- a/28/Chromolab_MS_SDH/main.html
+++ b/28/Chromolab_MS_SDH/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                МАБРУК САЛАМ МАБРУК АБДЕЛЬАЛИМ
+                МАБРУК САЛЛАМ МАБРУК АБДЕЛЬАЛИМ
             </div>
             <div class="line">
                 <div class="colum_1">
