--- a/28/Chromolab_EA_SODG;/main.html
+++ b/28/Chromolab_EA_SODG;/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                ЭРГАШЕВ УЛМАС
+                ТОЙЧУНОВА МАХАБАТ
             </div>
             <div class="line">
                 <div class="colum_1">
@@ -60,7 +60,7 @@
                     Дата рождения:	
                 </div>
                 <div class="colum_2">
-                    25.08.1986
+                    04.04.1985
                 </div>
             </div>
             <div class="line">
@@ -68,7 +68,7 @@
                     Дата заказа:	
                 </div>
                 <div class="colum_2">
-                   03.02.2022
+                   08.02.2022
                 </div>
             </div>
             <div class="line">
@@ -76,7 +76,7 @@
                     Дата взятия:	
                 </div>
                 <div class="colum_2">
-                    03.02.2022
+                    08.02.2022
                 </div>
             </div>
             <div class="line">
@@ -84,7 +84,7 @@
                     Дата выполнения:	
                 </div>
                 <div class="colum_2">
-                    03.02.2022
+                    08.02.2022
                 </div>
             </div>
             <div class="line">
