--- a/28/Chromolab_AK_ASDGSHG/main.html
+++ b/28/Chromolab_AK_ASDGSHG/main.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main__result">
             <div class="name">
-                АСАНБАВЕ КАЗАКБАЙ
+                АСАНБАЕВ КАЗАКБАЙ
             </div>
             <div class="line">
                 <div class="colum_1">
